# md2ppt

./: .gitignore  LICENSE  README.rst  md2ppt.py  out.pptx  pyproject.toml  readme.rst  test_sample.md
md2ppt/: __init__.py  __main__.py  slides_builder.py
tests/: test_slides_builder.py
