[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "md2ppt"
version = "0.1.0"
description = "Convert Markdown files into PowerPoint presentations (.pptx)"
readme = "README.rst"
license = { text = "MIT" }
authors = [
    { name = "Ryan Haas" },
]
keywords = ["markdown", "powerpoint", "pptx", "presentation", "slides"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Text Processing :: Markup",
]
requires-python = ">=3.9"
dependencies = [
    "python-pptx>=0.6.21",
    "lxml>=4.9",
]

[project.urls]
Homepage = "https://github.com/haasr/md2ppt"
"Bug Tracker" = "https://github.com/haasr/md2ppt/issues"

[project.scripts]
md2ppt = "md2ppt.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["md2ppt*"]
